--- a/_posts/2014/02/10/1235-pri.md
+++ b/_posts/2014/02/10/1235-pri.md
@@ -7,6 +7,6 @@ category: Destacadas
 layout: posts
 ---
 
-![](http://i.imgur.com/JDdWoDCm.jpg)La nueva delegada nacional del Partido Revolucionario Institucional (PRI), Paulina Alejandra del Moral, llegó a Zacatecas para, “como San Judas Tadeo”, atender los casos difíciles del partido, entre ellos preparar la renovación del Consejo Político Estatal, la renovación de los 58 comités municipales y, en noviembre, la elección de la nueva dirigencia estatal del ‘tricolor’, dijo Juan Carlos Lozano Martínez.
+![](http://i.imgur.com/kcjt8vim.jpg)La nueva delegada nacional del Partido Revolucionario Institucional (PRI), Paulina Alejandra del Moral, llegó a Zacatecas para, “como San Judas Tadeo”, atender los casos difíciles del partido, entre ellos preparar la renovación del Consejo Político Estatal, la renovación de los 58 comités municipales y, en noviembre, la elección de la nueva dirigencia estatal del ‘tricolor’, dijo Juan Carlos Lozano Martínez.
 
-El presidente estatal aludió a la llegada de la delegada, también diputada federal, como una acción que oxigenará al partido que es “heredero de la Revolución”, debido a que se encargará de la conciliación y de fomentar la unidad de los priístas divididos en diferentes grupos y expresiones.  
+El presidente estatal aludió a la llegada de la delegada, también diputada federal, como una acción que oxigenará al partido que es “heredero de la Revolución”, debido a que se encargará de la conciliación y de fomentar la unidad de los priístas divididos en diferentes grupos y expresiones.
