--- a/_posts/2014/02/15/2255-MAR.md
+++ b/_posts/2014/02/15/2255-MAR.md
@@ -7,7 +7,7 @@ category: Portada
 layout: posts
 ---
 
-■ Entrega apoyos y supervisa obras en Mezquital del Oro, Moyahua y Huanusco
+![](http://i.imgur.com/DxOK8lVm.jpg)■ Entrega apoyos y supervisa obras en Mezquital del Oro, Moyahua y Huanusco
 
 En gira por municipios del sureste zacatecano, el gobernador Miguel Alonso Reyes supervisó y arrancó obras de infraestructura educativa, además de entregar apoyos del programa Superación de la Marginación (Sumar), en los municipios de Mezquital del Oro, Moyahua y Huanusco. 
 
