--- a/_posts/2014/02/15/2155-ifai.md
+++ b/_posts/2014/02/15/2155-ifai.md
@@ -7,7 +7,7 @@ category: Principales
 layout: posts
 ---
 
-México, DF. El comisionado presidente del Instituto Federal de Acceso a la Información y Protección de Datos (Ifai), Gerardo Laveaga Rendón, dijo que hasta la fecha no han sido convocados por los senadores para apoyar en la elaboración de las leyes secundarias a la reforma constitucional en materia de transparencia y urgió a que pronto estén listas.
+![](http://i.imgur.com/TV2l0XRm.jpg)México, DF. El comisionado presidente del Instituto Federal de Acceso a la Información y Protección de Datos (Ifai), Gerardo Laveaga Rendón, dijo que hasta la fecha no han sido convocados por los senadores para apoyar en la elaboración de las leyes secundarias a la reforma constitucional en materia de transparencia y urgió a que pronto estén listas.
 
 En entrevista, expresó que el Ifai está elaborando una propuesta de lo que sería el marco regulatorio, pero entiende que en estos momentos la prioridad es saber quiénes de los actuales cuatro comisionados se quedarían en este organismo.
 
