--- a/_posts/2014/02/21/0121-mdmz.md
+++ b/_posts/2014/02/21/0121-mdmz.md
@@ -7,7 +7,7 @@ category: Educación
 layout: posts
 ---
 
-■ Se busca generar confusión entre el magisterio, asegura dirigente del movimiento
+![](http://i.imgur.com/PeCOdPxm.jpg)■ Se busca generar confusión entre el magisterio, asegura dirigente del movimiento
 
 ■ Continuarán reuniones para que docentes estén pendientes de la situación, comenta
 
