--- a/_posts/2014/02/21/0112-cfe.md
+++ b/_posts/2014/02/21/0112-cfe.md
@@ -1,11 +1,11 @@
 ---
-published: false
+published: true
 location: Local
 category: Portada
 layout: posts
 ---
 
-![](/_posts/2014/02/21/P8%20productores%20cfe%2C%20foto.jpg)
+![](http://i.imgur.com/W1oqDPWm.jpg)
 ■ El monto manejado hasta ahora era de 150 mdp; se incrementó por inicio de siembra: Santiago
 
 Después de la reunión celebrada entre productores del campo zacatecano, autoridades del Gobierno del Estado, del Gobierno Federal y representantes de la Comisión Federal de Electricidad (CFE), se acordó que la Federación aportará otro 25 por ciento a los apoyos para que los campesinos salden sus deudas con la CFE.
