--- a/_posts/2014/02/21/0112-cfe.md
+++ b/_posts/2014/02/21/0112-cfe.md
@@ -1,5 +1,7 @@
 ---
 published: true
+title: Logran nuevo acuerdo para saldar las deudas de productores  con la CFE
+author: RAQUEL OLLAQUINDIA
 location: Local
 category: Portada
 layout: posts
